--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          
 
             <ul id="button-tabs-list">
-                 <li><a href= "Projects.html" class = "link button-font" style='text-decoration:none'>Projects</a></li>
+                 <li><a href= "Randeep/HTML/Projects.html" class = "link button-font" style='text-decoration:none'>Projects</a></li>
                  <li><a href= "Tools & Frameworks.html" class = "link button-font" style='text-decoration:none'>Tools/Frameworks</a></li>
                  <li><a href= "Interests.html" class = "link button-font"style='text-decoration:none'>Interests</a></li>
             </ul>
