Update Tools & Frameworks.html

--- a/Tools & Frameworks.html
+++ b/Tools & Frameworks.html
@@ -6,7 +6,7 @@
     <body>
 
         <head>
-            <link href="../CSS/Tools & Frameworks.css" rel="stylesheet" type="text/css">
+            <link href="Tools & Frameworks.css" rel="stylesheet" type="text/css">
             <title>Randeep Bedi - Tools/Frameworks</title>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             
