Update Tools & Frameworks.html

--- a/Tools & Frameworks.html
+++ b/Tools & Frameworks.html
@@ -8,6 +8,7 @@
         <head>
             <link href="Tools & Frameworks.css" rel="stylesheet" type="text/css">
             <title>Randeep Bedi - Tools/Frameworks</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             
         </head>
