--- a/Projects.html
+++ b/Projects.html
@@ -8,7 +8,7 @@
     <body>
 
         <head>
-            <link href="Projects.css" rel="stylesheet" type="text/css">
+            <link href="../CSS/Projects.css" rel="stylesheet" type="text/css">
             <title>Randeep Bedi - Projects</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -75,7 +75,7 @@
                     <p class="project-description from-right slide-in">
                         I am currently designing and creating a finance app for iOS using Swift. 
                         This app will provide users with information about stocks, help plan purchases, create monthly plans for spending and more. 
-                        I Implemented UserDefaults to save and preload user data upon loading the app. 
+                        I implemented UserDefaults to save and preload user data upon loading the app. 
                         I also used Firebase to implement a login and register page using the user's email and password, with the option of using Face ID.
                         
                         <br>
@@ -266,8 +266,8 @@
 
 
 
-        <script type="text/javascript" src="app.js"></script>
-        <script type="text/javascript" src="observer.js"></script>
+        <script type="text/javascript" src="../JS/app.js"></script>
+        <script type="text/javascript" src="../JS/observer.js"></script>
 
     </body>
 
