--- a/Projects.html
+++ b/Projects.html
@@ -266,8 +266,8 @@
 
 
 
-        <script type="text/javascript" src="../JS/app.js"></script>
-        <script type="text/javascript" src="../JS/observer.js"></script>
+        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="observer.js"></script>
 
     </body>
 
