--- a/HTML/Tools & Frameworks.html
+++ b/HTML/Tools & Frameworks.html
@@ -14,7 +14,7 @@
 
         <div id="wrapper">
 
-            <a href="Home.html" id="nav-name" style='text-decoration:none'> Randeep Bedi</a>
+            <a href="README.html" id="nav-name" style='text-decoration:none'> Randeep Bedi</a>
         
             <div id="nav-tab">
 
