--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -15,7 +15,7 @@
 
         <div id="wrapper">
 
-            <a href="Home.html" id="nav-name" style='text-decoration:none'> Randeep Bedi</a>
+            <a href="README.html" id="nav-name" style='text-decoration:none'> Randeep Bedi</a>
                
             <div id="nav-tab">
 
