--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             
            <title>Randeep Bedi - Home</title>
            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-           <link href="../CSS/Home.css" rel="stylesheet" type="text/css">    
+           <link href="CSS/Home.css" rel="stylesheet" type="text/css">    
            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         
         </head>
