--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 id="main-title-name">Randeep Bedi</h1>
 
             <ul id="button-tabs-list">
-                 <li><a href= "../HTML/Projects.html" class = "link button-font" style='text-decoration:none'>Projects</a></li>
-                 <li><a href= "../HTML/Tools & Frameworks.html" class = "link button-font" style='text-decoration:none'>Tools/Frameworks</a></li>
-                 <li><a href= "../HTML/Interests.html" class = "link button-font"style='text-decoration:none'>Interests</a></li>
+                 <li><a href= "HTML/Projects.html" class = "link button-font" style='text-decoration:none'>Projects</a></li>
+                 <li><a href= "HTML/Tools & Frameworks.html" class = "link button-font" style='text-decoration:none'>Tools/Frameworks</a></li>
+                 <li><a href= "HTML/Interests.html" class = "link button-font"style='text-decoration:none'>Interests</a></li>
             </ul>
                 
         </div>
