--- a/HTML/Tools & Frameworks.html
+++ b/HTML/Tools & Frameworks.html
@@ -5,7 +5,7 @@
     <body>
 
         <head>
-            <link href="../CSS/Tools & Frameworks.css" rel="stylesheet" type="text/css">
+            <link href="CSS/Tools & Frameworks.css" rel="stylesheet" type="text/css">
             <title>Randeep Bedi - Tools/Frameworks</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
