--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -7,7 +7,7 @@
         <head>
             <title>Randeep Bedi - Projects</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link href="CSS/Projects.css" rel="stylesheet" type="text/css">
+            <link href="/CSS/Projects.css" rel="stylesheet" type="text/css">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         </head>
 
