--- a/HTML/Interests.html
+++ b/HTML/Interests.html
@@ -15,7 +15,7 @@
 
         <div id="wrapper">
 
-            <a href="index.html" id="nav-name" style='text-decoration:none'> Randeep Bedi </a>
+            <a href="../index.html" id="nav-name" style='text-decoration:none'> Randeep Bedi </a>
                
 
             <div id="nav-tab">
