--- a/HTML/Interests.html
+++ b/HTML/Interests.html
@@ -29,20 +29,20 @@
                     <li> <a href= "Interests.html" class = " nav-button-font" style='text-decoration:none'>Interests</a></li>
 
                     <li>  <a href = mailto:r4bedi@uwaterloo.ca class = "" >         
-                            <img class = "nav-button-image" src="/emaillogo.png">
+                            <img class = "nav-button-image" src="../emaillogo.png">
                          </a>
                     </li>
                     
                     <li>
                         <a href= https://www.linkedin.com/in/randeep-bedi class = "">
-                            <img class = "nav-button-image" src"=/linkedin.png">
+                            <img class = "nav-button-image" sr="../linkedin.png">
                         </a>
                     </li>
 
 
                     <li>
                         <a href=https://github.com/randeepb21 class = "">
-                            <img class = "nav-button-image" src="/github.png">
+                            <img class = "nav-button-image" src="../github.png">
                         </a>
                     </li>
                    
