--- a/HTML/Interests.html
+++ b/HTML/Interests.html
@@ -28,20 +28,20 @@
 
                     <li> <a href= "Interests.html" class = " nav-button-font" style='text-decoration:none'>Interests</a></li>
 
-                    <li>  <a href = mailto:r4bedi@uwaterloo.ca class = "" >         
+                    <li>  <a href = mailto:r4bedi@uwaterloo.ca >         
                             <img class = "nav-button-image" src="../emaillogo.png">
                          </a>
                     </li>
                     
                     <li>
-                        <a href= https://www.linkedin.com/in/randeep-bedi class = "" >
-                            <img class = "nav-button-image" sr="../linkedin.png">
+                        <a href= https://www.linkedin.com/in/randeep-bedi >
+                            <img class = "nav-button-image" src="../linkedin.png">
                         </a>
                     </li>
 
 
                     <li>
-                        <a href=https://github.com/randeepb21 class = "" >
+                        <a href=https://github.com/randeepb21 >
                             <img class = "nav-button-image" src="../github.png">
                         </a>
                     </li>
